# repo-summarizer

./: .gitignore  Cargo.toml  README.md
src/: main.rs  stats.rs  summarizer.rs
