[package]
name = "repo-summarizer"
version = "0.1.0"
edition = "2024"
authors = ["Katsuhiro Honda <freewave3@gmail.com>"]
description = "A tool for generating a text file summary of directory contents"
license = "MIT"
repository = "https://github.com/e-bebe/repo-summarizer"
keywords = ["directory", "summary", "code", "snapshot", "documentation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
anyhow = "1.0"
ignore = "0.4"
ptree = "0.4"
infer = "0.15"
rayon = "1.8"
glob = "0.3"
